[tool.poetry]
name = "brique-test"
version = "0.1.0"
description = ""
authors = ["GangBean <xbox2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
gdown = "^5.2.0"
numpy = "^2.0.1"
mysql-connector-python = "^9.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
